@@ -54,6 +54,7 @@ private:
 			bool param_full;
 			bool param_simple;
 			bool param_anywnd;
+			bool param_parent;
 		};
 		union {
 			bool param_second;
