@@ -7,6 +7,7 @@
 	* Added:
 		- Windowless verbose output (message box) is now topmost and has input focus
 		- +c/-c setting (close process)
+		- 'parent' parameter for /pid switch
 
 2017-01-17  Lcferrum <lcferrum@yandex.com>
 	
